--- a/OpenMP/EasyTasks/EasyTasks.vcxproj.filters
+++ b/OpenMP/EasyTasks/EasyTasks.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="EasyTasks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="task1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="task1.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
