--- a/OpenMP/EasyTasks/EasyTasks.vcxproj
+++ b/OpenMP/EasyTasks/EasyTasks.vcxproj
@@ -132,9 +132,10 @@
   <ItemGroup>
     <ClCompile Include="EasyTasks.cpp" />
     <ClCompile Include="task1.cpp" />
+    <ClCompile Include="task2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="task1.hpp" />
+    <ClInclude Include="tasks.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
