--- a/MPI/EasyTasks/EasyTasks.vcxproj.filters
+++ b/MPI/EasyTasks/EasyTasks.vcxproj.filters
@@ -15,10 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="EaasyTasks.cpp">
+    <ClCompile Include="task1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="task1.cpp">
+    <ClCompile Include="EasyTasks.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="task2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
