--- a/MPI/EasyTasks/EasyTasks.vcxproj
+++ b/MPI/EasyTasks/EasyTasks.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ClCompile Include="EasyTasks.cpp" />
     <ClCompile Include="task1.cpp" />
+    <ClCompile Include="task2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tasks.hpp" />
